Account for margins when updating mask layer in TrayBubbleView.

Bug: 764428
Change-Id: I051fc470ae57a15c6250aa14657239467852578f
Reviewed-on: https://chromium-review.googlesource.com/663422
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Commit-Queue: Jacob Dufault <jdufault@chromium.org>
Cr-Commit-Position: refs/heads/master@{#501431}
Former-commit-id: 8ea8144eceaa03731b0cbc96562ef9e45fad12a1